fixed askew spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -18,7 +18,7 @@ h3 {
 }
 
 hr {
-	margin-top: 2%;
+	margin: 1% 0;
 	width: 35%;
 	border-radius: 35px;
 }
